Cert-Manager/acme-challenge-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: acme-challenge-ingress
  namespace: cattle-system
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
  - host: rancher.480.io
    http:
      paths:
      - path: /.well-known/acme-challenge/(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: cert-manager
            port:
              number: 8080
