Cert-Manager/ingress-rancher-480.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rancher-ingress
  namespace: cattle-system
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-http
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - rancher.480.io
    secretName: rancher-480-io-tls
  rules:
  - host: rancher.480.io
    http:
      paths:
      - path: /.well-known/acme-challenge/(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: cert-manager
            port:
              number: 8080
      - path: /
        pathType: Prefix
        backend:
          service:
            name: rancher
            port:
              number: 80
